Closed
Bug 307308
Opened 20 years ago
Closed 20 years ago
SVG crash [@ _cairo_image_surface_acquire_dest_image]
Categories
(Core :: SVG, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: jruderman, Assigned: tor)
References
()
Details
(Keywords: crash, verified1.8)
Crash Data
Attachments
(1 file)
|
1.74 KB,
patch
|
vlad
:
review+
asa
:
approval1.8b4-
asa
:
approval1.8b5+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1) Gecko/20050906
Firefox/1.6a1
Viewing http://www.carto.net/papers/svg/samples/clipmask.shtml crashes Firefox.
Interestingly, if I open the page in a background tab, Firefox doesn't crash
until I switch to that tab.
TB9104935K
| Reporter | ||
Updated•20 years ago
|
Severity: normal → critical
Assignee: general → tor
Status: NEW → ASSIGNED
Attachment #195112 -
Flags: review?(vladimir)
Attachment #195112 -
Flags: approval1.8b4?
Comment on attachment 195112 [details] [diff] [review]
pass scratch space instead of NULL to acquite/release_dest_image
r=vladimir; please get this in to cairo CVS as well.
Attachment #195112 -
Flags: review?(vladimir) → review+
| Reporter | ||
Comment 3•20 years ago
|
||
http://www.carto.net/papers/svg/samples/patterns.shtml crashes in the same way.
Comment 5•20 years ago
|
||
shouldn't the release_dest_image call use extra, rather than &extra?
Comment 7•20 years ago
|
||
Comment on attachment 195112 [details] [diff] [review]
pass scratch space instead of NULL to acquite/release_dest_image
Lockdown for beta one happened last night and we've got candidates in hand so
this will need to wait until first thing in beta two.
Attachment #195112 -
Flags: approval1.8b5?
Attachment #195112 -
Flags: approval1.8b4?
Attachment #195112 -
Flags: approval1.8b4-
Updated•20 years ago
|
Attachment #195112 -
Flags: approval1.8b5? → approval1.8b5+
Checked in on branch.
Updated•20 years ago
|
Status: RESOLVED → VERIFIED
| Reporter | ||
Comment 9•20 years ago
|
||
Verified fixed on the Gecko 1.8 branch: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8) Gecko/20051108 Firefox/1.5.
Keywords: fixed1.8 → verified1.8
Updated•15 years ago
|
Crash Signature: [@ _cairo_image_surface_acquire_dest_image]
You need to log in
before you can comment on or make changes to this bug.
Description
•