Bug 307308 - Pass scratch space instead of NULL for image_extra to acquire/release_dest_image.  r=vlad